show basic info in homepage

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -4,3 +4,4 @@ login.username: 'Username'
 login.password: 'Password'
 login.submit: 'Submit'
 logout: 'Logout'
+toggle.navigation: 'Toggle navigation'
