checking for specific contents in templates

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -5,3 +5,5 @@ login.password: 'Password'
 login.submit: 'Submit'
 logout: 'Logout'
 toggle.navigation: 'Toggle navigation'
+site.motto: 'Monitor your sites'
+section.checks: 'Checks'
