show performance info in checks list

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -7,3 +7,12 @@ logout: 'Logout'
 toggle.navigation: 'Toggle navigation'
 site.motto: 'Monitor your sites'
 section.checks: 'Checks'
+check: 'check'
+check.status: 'status'
+check.status.enabled: 'enabled'
+check.status.disabled: 'disabled'
+check.url: 'url'
+check.performance: 'performance'
+check.performance.uptime: 'uptime'
+check.performance.average: 'average'
+check.performance.percentile: '%percent% percentile'
