show basic info about checks

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -16,3 +16,17 @@ check.performance: 'performance'
 check.performance.uptime: 'uptime'
 check.performance.average: 'average'
 check.performance.percentile: '%percent% percentile'
+check.date.range.description: '%date.range% performance'
+date.range: 'date range'
+date.range.type: 'date range type'
+date.range.type.custom: 'custom date range'
+date.range.type.minutes: 'minutes'
+date.range.type.hours: 'hours'
+date.range.type.last_24_hours: 'last 24 hours'
+date.range.type.day: 'day'
+date.range.type.week: 'week'
+date.range.type.month: 'month'
+date.range.type.year: 'year'
+date.range.description.start: 'since %date.start%'
+date.range.description.end: 'until %date.end%'
+date.range.description.range: 'from %date.start% until %date.end%'
