in navigation bar, mark current section as active

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -6,6 +6,7 @@ login.submit: 'Submit'
 logout: 'Logout'
 toggle.navigation: 'Toggle navigation'
 site.motto: 'Monitor your sites'
+section.dashboard: 'Dashboard'
 section.checks: 'Checks'
 check: 'check'
 check.status: 'status'
@@ -30,3 +31,4 @@ date.range.type.year: 'year'
 date.range.description.start: 'since %date.start%'
 date.range.description.end: 'until %date.end%'
 date.range.description.range: 'from %date.start% until %date.end%'
+link.current: 'current'
