refactoring styles and tests

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1,8 +1,10 @@
+skip.to.content: 'Skip to main content'
 login: 'Sign in'
-login.legend: 'Access form'
+login.legend: 'Login to %app.name%'
 login.username: 'Username'
 login.password: 'Password'
 login.submit: 'Submit'
+login.how.to: 'Use your email address to enter'
 logout: 'Logout'
 toggle.navigation: 'Toggle navigation'
 site.motto: 'Monitor your sites'
@@ -18,6 +20,7 @@ check.performance.uptime: 'uptime'
 check.performance.average: 'average'
 check.performance.percentile: '%percent% percentile'
 check.date.range.description: '%date.range% performance'
+check.measurements.caption: 'average measurements for this check'
 date.range: 'date range'
 date.range.type: 'date range type'
 date.range.type.custom: 'custom date range'
@@ -32,3 +35,9 @@ date.range.description.start: 'since %date.start%'
 date.range.description.end: 'until %date.end%'
 date.range.description.range: 'from %date.start% until %date.end%'
 link.current: 'current'
+measurement: 'measurement'
+measurement.date.from: 'from'
+measurement.date.to: 'to'
+measurement.result.duration: 'duration'
+measurement.result.average: 'average duration'
+measurement.result.diff: 'difference'
