refactoring styles and tests

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -41,3 +41,5 @@ measurement.date.to: 'to'
 measurement.result.duration: 'duration'
 measurement.result.average: 'average duration'
 measurement.result.diff: 'difference'
+footer.license: 'This is an %license%'
+footer.license.name: 'open source project'
