add access to alerts

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -10,6 +10,7 @@ toggle.navigation: 'Toggle navigation'
 site.motto: 'Monitor your sites'
 section.dashboard: 'Dashboard'
 section.checks: 'Checks'
+section.alerts: 'Alerts'
 check: 'check'
 check.status: 'status'
 check.status.enabled: 'enabled'
